<resources>
    <string name="app_name" translatable="false">You can do it</string>
    <string name="today_score">Today you earned %d/%d</string>
    <string name="task">task</string>
    <string name="create_new_task">create a task</string>
    <string name="month_score">this month you earned %d/%d</string>
    <string name="score_iv_description">star that represent the score</string>
    <string name="close_iv_description">click here to delete task</string>
    <string name="this_week_score">This week you earned %d/%d</string>
    <string name="title_hint">title</string>
    <string name="date_hint">date and hour</string>
    <string name="description_hint">description</string>
    <string name="date_format">MM/dd/YYYY</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="difficulty_hint">difficulty</string>
    <string name="easy_difficulty">easy</string>
    <string name="normal_difficulty">normal</string>
    <string name="hard_difficulty">hard</string>
    <string name="create_task_action">create task</string>
    <string name="select_date">when do you want do this task?</string>
    <string name="select_time">at what hour do you want to do it?</string>
    <string name="creation_error_title">Are some problems with your task</string>
    <string name="creation_error_text">Please check if some fields are empty or date is in the future</string>
    <string name="finished">finished</string>
    <string name="delete_dialog_title">WARNING</string>
    <string name="delete_dialog_message">if you delete this task you will lose its score</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="some_day_score">of this day you can still get %d</string>
    <string name="date_time_format">MM/dd/YYYY HH:mm</string>
    <string name="touch_to_select_date">touch me for search by date</string>
    <string name="nothing_here">nothing here by the moment select a new date</string>
    <string name="search">search</string>
    <string name="finish_task">finish</string>
    <string name="retake_task">retake</string>
    <string name="delete_task">delete</string>
    <string name="close">close detail</string>
    <string name="notification_channel_id">You can do it reminders</string>
    <string name="notification_title">reminder</string>
    <string name="notification_description">dont forget to do: %s</string>
    <string name="accomplished_percentage">accomplished percentage</string>
    <string name="remainder_percentage">remainder percentage</string>
    <string name="this_week_statistics_barchart_title">Accomplished score per day this week</string>
    <string name="this_week_pie_chart_title">This week progress</string>
    <string name="this_month_statistics_linechart_title">Accomplished score per day this month</string>
    <string name="this_month_pie_chart_title">This month progress</string>
    <string name="this_year_statistics_bar_chart_title">Accomplished score per month this year</string>
    <string name="this_year_pie_chart_title">This month progress</string>
    <string name="monday_abbv">M</string>
    <string name="tuesday_abbv">T</string>
    <string name="wednesday_abbv">W</string>
    <string name="thursday_abbv">R</string>
    <string name="friday_abbv">F</string>
    <string name="saturday_abbv">S</string>
    <string name="sunday_abbv">U</string>
    <string name="jan_abbv">Jan</string>
    <string name="feb_abbv">Feb</string>
    <string name="mar_abbv">Mar</string>
    <string name="apr_abbv">Apr</string>
    <string name="may_abbv">May</string>
    <string name="jun_abbv">Jun</string>
    <string name="jul_abbv">Jul</string>
    <string name="aug_abbv">Aug</string>
    <string name="sep_abbv">Sep</string>
    <string name="oct_abbv">Oct</string>
    <string name="nov_abbv">Nov</string>
    <string name="dec_abbv">Dec</string>
    <string name="january">January</string>
    <string name="febraury">Febraury</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="emergency_contact">emergency contact</string>
    <string name="about_us">about us</string>
    <string name="emergency_contact_icon">emergency contact icon</string>
    <string name="about_us_icon">about us icon</string>
    <string name="contact_name">contact name</string>
    <string name="phone_number">phone number</string>
    <string name="stablish_emergency_contact">stablish emergency contact</string>
    <string name="statistics">statistics</string>
    <string name="configuration">configuration</string>
    <string name="contact_warning">please, stablish a valid emergency contact first</string>
    <string name="update_emergency_contact">update emergency contact</string>
    <string name="emergency_contact_error">values introduced aren\'t valid</string>
    <string name="about_us_message">Developer: Alejandro Gómez Lucena.\nThis application is the final project for the development of multiplatform applications at IES Trassierra.</string>

</resources>