<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewContactConfiguration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cardViewAboutUs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998"
        app:layout_constraintVertical_chainStyle="packed">

        <LinearLayout
            android:id="@+id/contactConfigurationRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="30dp">

            <TextView
                android:id="@+id/tvConfigureContact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/emergency_contact"
                android:textColor="#7F7F7F"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/contactIcon"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@string/emergency_contact_icon"
                app:srcCompat="@drawable/ic_baseline_contacts_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewContactConfiguration">

        <LinearLayout
            android:id="@+id/aboutUsRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="30dp">

            <TextView
                android:id="@+id/tvAboutUs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/about_us"
                android:textColor="#7F7F7F"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/aboutUsIcon"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:contentDescription="@string/about_us_icon"
                app:srcCompat="@drawable/ic_baseline_live_help_24" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>